edit some styles

--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,10 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=2.6">
+	<link rel="stylesheet" href="title.styles.css?v=2.8">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.6">
+	<link rel="stylesheet" href="css/main.min.css?v=2.8">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
@@ -138,7 +138,7 @@
 						<div class="layout column layout_16"></div>
 						<div class="layout column layout_9"></div>
 						<div class="layout column layout_9">
-							<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+							<a href="tel:+7 (4213) 69-81-00" class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
 								<div class="inner">
 									<label class="cell-icon" for="tg-phones-9">
 										<div class="icon"></div>
@@ -148,14 +148,14 @@
 										<div class="cell-text">
 											<div class="text_body">
 												<div class="align-elem">
-													<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+													<div><span>+7 (4212) 69-81-00</span></div>
 												</div>
 											</div>
 											<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
 										</div>
 									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 
@@ -252,12 +252,12 @@
 
 									<div class="spoiler" id="spoiler">
 										<p>Все знают панельные дома, их плюсы и минусы:</p>
-										<p><b>Плюсы:</b></p>
+										<p><span><b>Плюсы:</b></span></p>
 										<ul>
 											<li>Скорость строительства</li>
 											<li>Цена</li>
 										</ul>
-										<p><b>Минусы:</b></p>
+										<p><span><b>Минусы:</b></span></p>
 										<ul>
 											<li>Типовые планировки</li>
 											<li>низкие потолки – до 2,5м</li>
@@ -334,7 +334,7 @@
 								<div class="item-outer">
 									<div class="item">
 										<a class="image fancybox" href="img/workshop-zbi.jpg">
-											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<div class="item-label"></div>
 											<span class="img-convert img-cover"><img src="img/workshop-zbi.jpg" alt="Цех по производству ЖБИ"></span>
 											<div class="image-inner"></div>
 										</a>
@@ -362,7 +362,7 @@
 								<div class="item-outer">
 									<div class="item">
 										<a class="image fancybox" href="img/workshop-metall.jpg">
-											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<div class="item-label"></div>
 											<span class="img-convert img-cover"><img src="img/workshop-metall.jpg" alt="Цех производства металлоконструкций"></span>
 											<div class="image-inner"></div>
 										</a>
