--- a/app/dealers.html
+++ b/app/dealers.html
@@ -54,7 +54,7 @@
 		<div class="circle first"></div>
 		<div class="circle second"></div>
 	</a>
-		
+
 	<div class="wrapper editorElement layer-type-wrapper" >
 		<div class="side-panel side-panel-46 widget-type-side_panel editorElement layer-type-widget widget-28" data-layers="['widget-4':['tablet-landscape':'inSide','tablet-portrait':'inSide','mobile-landscape':'inSide','mobile-portrait':'inSide']]" data-phantom="1" data-position="right">
 			<div class="side-panel-top">
@@ -118,24 +118,22 @@
 		</div>
 
 
-		<div class="editorElement layer-type-block ui-droppable block-4">
-			<div class="layout column layout_16">
-				</div>
-				<div class="layout column layout_9"></div>
-				<div class="layout column layout_9">
-					<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-						<div class="inner">
-							<label class="cell-icon" for="tg-phones-9">
-								<div class="icon"></div>
-							</label>
-							<input id="tg-phones-9" class="tgl-but" type="checkbox">
-							<div class="block-body-drop">
-								<div class="cell-text">
-									<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
-									<div class="text_body">
-										<div class="align-elem">
-											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
-										</div>
+		<div class="editorElement layer-type-block ui-droppable block-4 full-height-image">
+			<div class="layout column layout_16"></div>
+			<div class="layout column layout_9"></div>
+			<div class="layout column layout_9">
+				<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+					<div class="inner">
+						<label class="cell-icon" for="tg-phones-9">
+							<div class="icon"></div>
+						</label>
+						<input id="tg-phones-9" class="tgl-but" type="checkbox">
+						<div class="block-body-drop">
+							<div class="cell-text">
+								<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
+								<div class="text_body">
+									<div class="align-elem">
+										<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
 									</div>
 								</div>
 							</div>
@@ -145,157 +143,188 @@
 			</div>
 		</div>
 
+		<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
 
-
-		<div class="editorElement layer-type-block ui-droppable block-19" >
-			<div class="editorElement layer-type-block ui-droppable block-20" >
-				<div class="editorElement layer-type-block ui-droppable block-21" >
-					<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Дилерам</div> 
-					<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дилерам</h1>
-					<article class="content-52 content widget-31 widget-type-content editorElement layer-type-widget">
-
-						<div class="type-text-block frames-content">
-
-							<h2>Хабаровский завод домокомплектов КПД 100 производит качественные железобетонные дома по уникальной цене всего за месяц!</h2>
-							<p>Гарантия на наши дома - 50 лет!</p>
-							<p>Преимущества нашей технологии в скорости строительства и в качестве производства!</p>
-							<h2>Завод домокомплектов КПД 100 приглашает к сотрудничеству дилеров в регионах: г. Владивосток, Южно - Сахалинск, г. Комсомольск, г. Советская Гавань</h2>
-							<h2>В чем Ваша выгода?</h2>
-							<h3>Чтобы Вы смогли посчитать Вашу выгоду от сотрудничества с нами, приведем пример:</h3>
-							<h3><span>Наш дом 147 кв м (8*8м) в 2 этажа, мы продаем за 3 690 тыс рублей.</span></h3>
-							<p>Эта цена включает в себя:</p>
-							<ul>
-								<li>производство домокомплекта: сваи, колонно-ригельный каркас дома, ребристые плиты перекрытия, трехслойные стеновые панели</li>
-								<li>строительство домокомплекта на участке: фундамент, колонно-ригельный каркас дома, монтаж перекрытий и стеновых панелей, утепление швов между стеновыми панелями;</li>
-								<li>Дополнительные услуги: строительство кровли с утеплением, террас, балконов, установка окон и дверей, устройство утеплителя в ребристых плитах перекрытий первого этажа и межэтажного перекрытия, стяжка пола, покрытие фасада материалом "Терракоат стандарт", установка стояков холодного водоснабжения и канализации, устройство вентиляции</li>
-							</ul>
-							<h3><span>При этом сам домокомплект с завода без строительства и дополнительных услуг стоит всего 1 920 000 рублей!</span></h3>
-							<h3>Монтаж дома, все дополнительные услуги по дому Вы можете выполнять в своем регионе самостоятельно и тем самым - зарабатывать!</h3>
-							<h3><span>Вся разница в цене - Ваша!</span></h3>
-							<h3>Срок строительства дома от завода КПД 100 составляет в среднем 1,5 месяца - <br>Cвою прибыль Вы будете получать очень быстро!</h3>
-							<h2>Станьте партнером уникального завода домокомплектов КПД 100!</h2>
-							
-						</div>
-
-					</article>
-				</div>
-			</div>
-		</div>
-
-
-
-		<div class="widget-20">
-			<div id="map"></div>
-		</div>
-
-
-
-		<div class="editorElement layer-type-block ui-droppable block-18" >
-			<div class="editorElement layer-type-block ui-droppable block-16" >
-				<div class="layout column layout_37" >
-					<div class="editorElement layer-type-block ui-droppable block-15" >
-
-
-						<div class="editable_block-35 widget-21 editorElement layer-type-widget">
-							<div class="body">
-								<div class="text"><div class="align-elem"><p>Перепечатка и использование материалов с данного сайта, разрешена только по согласию с владельцем.  </p></div></div>
-							</div>
-						</div>
-
-
-						<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
-							<div class="align-elem">Copyright &copy; 2019<br/></div>
+			<div class="inner">
+				<label class="cell-icon" for="tg-email-14">
+					<div class="icon instagram"></div>
+				</label>
+				<div class="block-body-drop">
+					<div class="cell-text">
+						<div class="title"><div class="align-elem">Email:</div></div>
+						<div class="text_body">
+							<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
 						</div>
 					</div>
 				</div>
-				<div class="layout column layout_38" >
-					<div class="phones-38 widget-23 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-						<div class="inner">
-							<label class="cell-icon" for="tg-phones-38">
-								<div class="icon"></div>
-							</label>
-							<input id="tg-phones-38" class="tgl-but" type="checkbox">
-							<div class="block-body-drop">
-								<div class="cell-text">
-									<div class="title"><div class="align-elem">Бесплатная консультация</div></div>
-									<div class="text_body">
-										<div class="align-elem">
-											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
-										</div>
+			</div>
+
+			<div class="inner">
+				<label class="cell-icon" for="tg-email-14">
+					<div class="icon"></div>
+				</label>
+				<input id="tg-email-14" class="tgl-but" type="checkbox">
+				<div class="block-body-drop">
+					<div class="cell-text">
+						<div class="title"><div class="align-elem">Email:</div></div>
+						<div class="text_body">
+							<div class="align-elem"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+
+
+
+	<div class="editorElement layer-type-block ui-droppable block-19" >
+		<div class="editorElement layer-type-block ui-droppable block-20" >
+			<div class="editorElement layer-type-block ui-droppable block-21" >
+				<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Дилерам</div> 
+				<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дилерам</h1>
+				<article class="content-52 content widget-31 widget-type-content editorElement layer-type-widget">
+
+					<div class="type-text-block frames-content">
+
+						<h2>Хабаровский завод домокомплектов КПД 100 производит качественные железобетонные дома по уникальной цене всего за месяц!</h2>
+						<p>Гарантия на наши дома - 50 лет!</p>
+						<p>Преимущества нашей технологии в скорости строительства и в качестве производства!</p>
+						<h2>Завод домокомплектов КПД 100 приглашает к сотрудничеству дилеров в регионах: г. Владивосток, Южно - Сахалинск, г. Комсомольск, г. Советская Гавань</h2>
+						<h2>В чем Ваша выгода?</h2>
+						<h3>Чтобы Вы смогли посчитать Вашу выгоду от сотрудничества с нами, приведем пример:</h3>
+						<h3><span>Наш дом 147 кв м (8*8м) в 2 этажа, мы продаем за 3 690 тыс рублей.</span></h3>
+						<p>Эта цена включает в себя:</p>
+						<ul>
+							<li>производство домокомплекта: сваи, колонно-ригельный каркас дома, ребристые плиты перекрытия, трехслойные стеновые панели</li>
+							<li>строительство домокомплекта на участке: фундамент, колонно-ригельный каркас дома, монтаж перекрытий и стеновых панелей, утепление швов между стеновыми панелями;</li>
+							<li>Дополнительные услуги: строительство кровли с утеплением, террас, балконов, установка окон и дверей, устройство утеплителя в ребристых плитах перекрытий первого этажа и межэтажного перекрытия, стяжка пола, покрытие фасада материалом "Терракоат стандарт", установка стояков холодного водоснабжения и канализации, устройство вентиляции</li>
+						</ul>
+						<h3><span>При этом сам домокомплект с завода без строительства и дополнительных услуг стоит всего 1 920 000 рублей!</span></h3>
+						<h3>Монтаж дома, все дополнительные услуги по дому Вы можете выполнять в своем регионе самостоятельно и тем самым - зарабатывать!</h3>
+						<h3><span>Вся разница в цене - Ваша!</span></h3>
+						<h3>Срок строительства дома от завода КПД 100 составляет в среднем 1,5 месяца - <br>Cвою прибыль Вы будете получать очень быстро!</h3>
+						<h2>Станьте партнером уникального завода домокомплектов КПД 100!</h2>
+
+					</div>
+
+				</article>
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="widget-20">
+		<div id="map"></div>
+	</div>
+
+
+
+	<div class="editorElement layer-type-block ui-droppable block-18" >
+		<div class="editorElement layer-type-block ui-droppable block-16" >
+			<div class="layout column layout_37" >
+				<div class="editorElement layer-type-block ui-droppable block-15" >
+
+
+					<div class="editable_block-35 widget-21 editorElement layer-type-widget">
+						<div class="body">
+							<div class="text"><div class="align-elem"><p>Перепечатка и использование материалов с данного сайта, разрешена только по согласию с владельцем.  </p></div></div>
+						</div>
+					</div>
+
+
+					<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
+						<div class="align-elem">Copyright &copy; 2019<br/></div>
+					</div>
+				</div>
+			</div>
+			<div class="layout column layout_38" >
+				<div class="phones-38 widget-23 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+					<div class="inner">
+						<label class="cell-icon" for="tg-phones-38">
+							<div class="icon"></div>
+						</label>
+						<input id="tg-phones-38" class="tgl-but" type="checkbox">
+						<div class="block-body-drop">
+							<div class="cell-text">
+								<div class="title"><div class="align-elem">Бесплатная консультация</div></div>
+								<div class="text_body">
+									<div class="align-elem">
+										<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-
 				</div>
-				<div class="layout column layout_39" >
-					<div class="address-39 widget-24 address-block contacts-block widget-type-contacts_address editorElement layer-type-widget">
-						<div class="inner">
-							<label class="cell-icon" for="tg39">
-								<div class="icon"></div>
-							</label>
-							<input id="tg39" class="tgl-but" type="checkbox">
-							<div class="block-body-drop">
-								<div class="cell-text">
-									<div class="title"><div class="align-elem">Нас легко найти</div></div>
-									<div class="text_body">
-										<div class="align-elem">680000 Россия, г. Хабаровск, ул. Иркутская, 8</div>
-									</div>
+
+			</div>
+			<div class="layout column layout_39" >
+				<div class="address-39 widget-24 address-block contacts-block widget-type-contacts_address editorElement layer-type-widget">
+					<div class="inner">
+						<label class="cell-icon" for="tg39">
+							<div class="icon"></div>
+						</label>
+						<input id="tg39" class="tgl-but" type="checkbox">
+						<div class="block-body-drop">
+							<div class="cell-text">
+								<div class="title"><div class="align-elem">Нас легко найти</div></div>
+								<div class="text_body">
+									<div class="align-elem">680000 Россия, г. Хабаровск, ул. Иркутская, 8</div>
 								</div>
 							</div>
 						</div>
 					</div>
+				</div>
 
-				</div>
-				<div class="layout column layout_41" >
-					<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
-						<div class="icon"></div>
-					</div>          
-				</div>
 			</div>
-			<div class="editorElement layer-type-block ui-droppable block-17" >
-				<div class="layout column layout_43" >
-					<div class="mega-copyright widget-27 widget-type-mega_copyright editorElement layer-type-widget">
-						<span style='font-size:10px;' class='copyright'>
-							<a href="https://e2.group/" rel="nofollow" target="_blank" title="e2.group" class="copyright">e2.group</a>
-						</span>
-					</div>
+			<div class="layout column layout_41" >
+				<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
+					<div class="icon"></div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="d-none">
 
-		<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
-			<div class="success">
-				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
-			</div>
-			<h4>Позвоните нам, для бесплатной консультации</h4>
-			<span>
-				<a href="tel:+7 (4212) 69-81-00">
-					<svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>
-				+7 (4212) 69-81-00</a>
-			</span>
-			<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
-			<!-- Hidden Required Fields -->
-			<input type="hidden" name="project_name" value="КПД-100">
-			<input type="hidden" name="form_subject" value="КПД-100 | Заявка на консультацию">
-			<!-- END Hidden Required Fields -->
-			<div class="inputs">
-				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-				<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-				<input class="input" type="text" name="email" placeholder="E-mail" required>
-			</div>
-			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
-			<div class="confirm">
-				<input class="checkbox" type="checkbox" checked required />
-				<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
-			</div>
-		</form>
 
-	</div>
+
+
+</div>
+
+<div class="d-none">
+
+	<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
+		<div class="success">
+			<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
+		</div>
+		<h4>Позвоните нам, для бесплатной консультации</h4>
+		<span>
+			<a href="tel:+7 (4212) 69-81-00">
+				<svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>
+			+7 (4212) 69-81-00</a>
+		</span>
+		<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
+		<!-- Hidden Required Fields -->
+		<input type="hidden" name="project_name" value="КПД-100">
+		<input type="hidden" name="form_subject" value="КПД-100 | Заявка на консультацию">
+		<!-- END Hidden Required Fields -->
+		<div class="inputs">
+			<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
+			<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
+			<input class="input" type="text" name="email" placeholder="E-mail" required>
+		</div>
+		<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
+		<div class="confirm">
+			<input class="checkbox" type="checkbox" checked required />
+			<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
+		</div>
+	</form>
+
+</div>
 
 </body>
 
