--- a/app/index.html
+++ b/app/index.html
@@ -562,12 +562,12 @@
 
 	<div class="editorElement layer-type-block ui-droppable block-11" >
 		<div class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget">
-			<div class="header">
+
+			<!-- <div class="header">
 				<div class="header_text">
 					<div class="align-elem">Наши изделия использовались в строительстве</div>
 				</div>
-
-			</div>
+			</div> -->
 
 			<div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Галерея</h2></div></div>
 
@@ -762,9 +762,9 @@
 
 			<div class="blocklist blocklist-25 widget-14 horizontal_mode widget-type-block_list editorElement layer-type-widget">
 
-				<div class="header">
+				<!-- <div class="header">
 					<div class="header_text"><div class="align-elem">Результат нашей работы</div></div>
-				</div>
+				</div> -->
 				<div class="description"><div class="align-elem"><h2 class="align-elem tac" wm-editable="true" contenteditable="false">Качество</h2></div></div>
 				<div class="body-outer">
 					<div class="body">
@@ -856,8 +856,10 @@
 					<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
 						<div class="align-elem">Copyright &copy; 2020<br/></div>
 					</div>
+
 				</div>
 			</div>
+
 			<div class="layout column layout_38" >
 				<div class="phones-38 widget-23 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
 					<div class="inner">
@@ -877,10 +879,9 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 
-			<div class="layout column layout_39" >
+			<div class="layout column layout_39">
 				<div class="address-39 widget-24 address-block contacts-block widget-type-contacts_address editorElement layer-type-widget">
 					<div class="inner">
 						<label class="cell-icon" for="tg39">
@@ -902,19 +903,12 @@
 			<div class="layout column layout_41" >
 				<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
 					<div class="icon"></div>
-				</div>          
-			</div>
-		</div>
-		<div class="editorElement layer-type-block ui-droppable block-17" >
-			<div class="layout column layout_43" >
-				<div class="mega-copyright widget-27 widget-type-mega_copyright editorElement layer-type-widget">
-					<span style='font-size:10px;' class='copyright'>
-						<a href="https://e2.group/" rel="nofollow" target="_blank" title="e2.group" class="copyright">e2.group</a>
-					</span>
 				</div>
 			</div>
+
 		</div>
 	</div>
+
 	<div class="side-panel side-panel-46 widget-type-side_panel editorElement layer-type-widget widget-28" data-layers="['widget-4':['tablet-landscape':'inSide','tablet-portrait':'inSide','mobile-landscape':'inSide','mobile-portrait':'inSide']]" data-phantom="1" data-position="right">
 		<div class="side-panel-top">
 			<div class="side-panel-button">
