--- a/app/blog-page-4.html
+++ b/app/blog-page-4.html
@@ -119,27 +119,28 @@
 				</div>
 			</div>
 
-			<div class="editorElement layer-type-block ui-droppable block-4">
+			<div class="editorElement layer-type-block ui-droppable block-4 full-height-image">
 
 				<div class="layout column layout_16"></div>
 
-			<div class="layout column layout_8" >
-				<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
-			</div>
+				<div class="layout column layout_8" >
+					<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
+				</div>
 
-			<div class="layout column layout_9" >
-				<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-					<div class="inner">
-						<label class="cell-icon" for="tg-phones-9">
-							<div class="icon"></div>
-						</label>
-						<input id="tg-phones-9" class="tgl-but" type="checkbox">
-						<div class="block-body-drop">
-							<div class="cell-text">
-								<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
-								<div class="text_body">
-									<div class="align-elem">
-										<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>													</div>
+				<div class="layout column layout_9" >
+					<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+						<div class="inner">
+							<label class="cell-icon" for="tg-phones-9">
+								<div class="icon"></div>
+							</label>
+							<input id="tg-phones-9" class="tgl-but" type="checkbox">
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
+									<div class="text_body">
+										<div class="align-elem">
+											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -148,11 +149,45 @@
 				</div>
 
 			</div>
+
+			<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
+
+				<div class="inner">
+					<label class="cell-icon" for="tg-email-14">
+						<div class="icon instagram"></div>
+					</label>
+					<div class="block-body-drop">
+						<div class="cell-text">
+							<div class="title"><div class="align-elem">Email:</div></div>
+							<div class="text_body">
+								<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="inner">
+					<label class="cell-icon" for="tg-email-14">
+						<div class="icon"></div>
+					</label>
+					<input id="tg-email-14" class="tgl-but" type="checkbox">
+					<div class="block-body-drop">
+						<div class="cell-text">
+							<div class="title"><div class="align-elem">Email:</div></div>
+							<div class="text_body">
+								<div class="align-elem"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
 			
 		</div>
-		<div class="editorElement layer-type-block ui-droppable block-19" >
-			<div class="editorElement layer-type-block ui-droppable block-20" >
-				<div class="editorElement layer-type-block ui-droppable block-21" >
+
+		<div class="editorElement layer-type-block ui-droppable block-19">
+			<div class="editorElement layer-type-block ui-droppable block-20">
+				<div class="editorElement layer-type-block ui-droppable block-21">
 
 					<div class="widget-29 path widget-type-path editorElement layer-type-widget">
 						<a href="index.html">Главная</a> \ <a href="blog.html">Наши статьи</a> \ 7 ВИДОВ УСЛУГ ДЛЯ ТЕХ, КТО СТРОИТ ДОМ</div> 
@@ -273,15 +308,6 @@
 							<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
 								<div class="icon"></div>
 							</div>          
-						</div>
-					</div>
-					<div class="editorElement layer-type-block ui-droppable block-17" >
-						<div class="layout column layout_43" >
-							<div class="mega-copyright widget-27 widget-type-mega_copyright editorElement layer-type-widget">
-								<span style='font-size:10px;' class='copyright'>
-									<a href="https://e2.group/" rel="nofollow" target="_blank" title="e2.group" class="copyright">e2.group</a>
-								</span>
-							</div>
 						</div>
 					</div>
 				</div>
