--- a/app/blog.html
+++ b/app/blog.html
@@ -118,46 +118,28 @@
 
 
 
-			<div class="editorElement layer-type-block ui-droppable block-4">
+			<div class="editorElement layer-type-block ui-droppable block-4 full-height-image">
 
-				<div class="layout column layout_16">
-				<!-- <div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-					<div class="inner just-phone">
-						<label class="cell-icon" for="tg-phones-9">
-							<div class="icon"></div>
-						</label>
-						<input id="tg-phones-9" class="tgl-but" type="checkbox">
-						<div class="block-body-drop">
-							<div class="cell-text">
-								<div class="title opacity"><div class="align-elem">Ответим на все ваши вопросы</div></div>
-								<div class="text_body">
-									<div class="align-elem">
-										<div><p>8-800-600-18-18</p></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div> -->
-			</div>
+				<div class="layout column layout_16"></div>
 
-			<div class="layout column layout_8" >
-				<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
-			</div>
+				<div class="layout column layout_8" >
+					<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
+				</div>
 
-			<div class="layout column layout_9" >
-				<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-					<div class="inner">
-						<label class="cell-icon" for="tg-phones-9">
-							<div class="icon"></div>
-						</label>
-						<input id="tg-phones-9" class="tgl-but" type="checkbox">
-						<div class="block-body-drop">
-							<div class="cell-text">
-								<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
-								<div class="text_body">
-									<div class="align-elem">
-										<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>													</div>
+				<div class="layout column layout_9" >
+					<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+						<div class="inner">
+							<label class="cell-icon" for="tg-phones-9">
+								<div class="icon"></div>
+							</label>
+							<input id="tg-phones-9" class="tgl-but" type="checkbox">
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
+									<div class="text_body">
+										<div class="align-elem">
+											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -166,6 +148,39 @@
 				</div>
 
 			</div>
+
+			<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
+
+			<div class="inner">
+				<label class="cell-icon" for="tg-email-14">
+					<div class="icon instagram"></div>
+				</label>
+				<div class="block-body-drop">
+					<div class="cell-text">
+						<div class="title"><div class="align-elem">Email:</div></div>
+						<div class="text_body">
+							<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="inner">
+				<label class="cell-icon" for="tg-email-14">
+					<div class="icon"></div>
+				</label>
+				<input id="tg-email-14" class="tgl-but" type="checkbox">
+				<div class="block-body-drop">
+					<div class="cell-text">
+						<div class="title"><div class="align-elem">Email:</div></div>
+						<div class="text_body">
+							<div class="align-elem"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
 
 
 		</div>
@@ -416,15 +431,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
 		<div class="widget-20">
 			<div id="map"></div>
 		</div>
@@ -436,26 +442,20 @@
 				<div class="layout column layout_37" >
 					<div class="editorElement layer-type-block ui-droppable block-15" >
 
-
 						<div class="editable_block-35 widget-21 editorElement layer-type-widget">
 							<div class="body">
-								<div class="text"><div class="align-elem"><p>Перепечатка и использование материалов с данного сайта, разрешена только по согласию с владельцем.  </p></div></div>
-
+								<div class="text"><div class="align-elem"><p>Перепечатка и использование материалов с данного сайта, разрешена только по согласию с владельцем.</p></div></div>
 							</div>
 						</div>
-
 
 						<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
-
-							<div class="align-elem">
-								Copyright &copy; 2019							<br />
-
-							</div>
-
+							<div class="align-elem">Copyright &copy; 2019<br/></div>
 						</div>
+
 					</div>
 				</div>
-				<div class="layout column layout_38" >
+
+				<div class="layout column layout_38">
 					<div class="phones-38 widget-23 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
 						<div class="inner">
 							<label class="cell-icon" for="tg-phones-38">
@@ -464,134 +464,130 @@
 							<input id="tg-phones-38" class="tgl-but" type="checkbox">
 							<div class="block-body-drop">
 								<div class="cell-text">
-									<div class="title"><div class="align-elem">Бесплатная консультация</div></div>
+									<div class="title">
+										<div class="align-elem">Бесплатная консультация</div>
+									</div>
 									<div class="text_body">
 										<div class="align-elem">
-											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>													</div>
+											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-
 					</div>
-					<div class="layout column layout_39" >
-						<div class="address-39 widget-24 address-block contacts-block widget-type-contacts_address editorElement layer-type-widget">
-							<div class="inner">
-								<label class="cell-icon" for="tg39">
-									<div class="icon"></div>
-								</label>
-								<input id="tg39" class="tgl-but" type="checkbox">
-								<div class="block-body-drop">
-									<div class="cell-text">
-										<div class="title"><div class="align-elem">Нас легко найти</div></div>
-										<div class="text_body">
-											<div class="align-elem">Россия, г. Хабаровск, ул. Иркутская, 8</div>
-										</div>
+				</div>
+
+				<div class="layout column layout_39" >
+					<div class="address-39 widget-24 address-block contacts-block widget-type-contacts_address editorElement layer-type-widget">
+						<div class="inner">
+							<label class="cell-icon" for="tg39">
+								<div class="icon"></div>
+							</label>
+							<input id="tg39" class="tgl-but" type="checkbox">
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title">
+										<div class="align-elem">Нас легко найти</div>
+									</div>
+									<div class="text_body">
+										<div class="align-elem">Россия, г. Хабаровск, ул. Иркутская, 8</div>
 									</div>
 								</div>
 							</div>
 						</div>
-
-					</div>
-					<div class="layout column layout_41">
-						<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
-							<div class="icon"></div>
-						</div>          
 					</div>
 				</div>
-				<div class="editorElement layer-type-block ui-droppable block-17">
-					<div class="layout column layout_43">
-						<div class="mega-copyright widget-27 widget-type-mega_copyright editorElement layer-type-widget">
-							<span style='font-size:10px;' class='copyright'>
-								<a href="https://e2.group/" rel="nofollow" target="_blank" title="e2.group" class="copyright">e2.group</a>
-							</span>
-						</div>
-					</div>
+
+				<div class="layout column layout_41">
+					<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
+						<div class="icon"></div>
+					</div>          
 				</div>
 			</div>
 		</div>
+	</div>
 
 
 
-		<div class="d-none">
-			<div id="take-consultation" class="popup-window zoom-anim-dialog">
+	<div class="d-none">
+		<div id="take-consultation" class="popup-window zoom-anim-dialog">
 
-				<div class="success">
-					<h4>Спасибо за заявку!</h4>
-					<p>В ближайшее время с вами свяжется наш специалист.</p>
-				</div>
+			<div class="success">
+				<h4>Спасибо за заявку!</h4>
+				<p>В ближайшее время с вами свяжется наш специалист.</p>
+			</div>
 
-				<div class="layout column layout_20" >
-					<div class="form-20 widget-11 vertical_mode widget-type-form_adaptive editorElement layer-type-widget">
-						<div class="form__header"><div class="align-elem">Так же мы выполняем заказы на любые сложные железобетонные изделия</div></div>
-						<div class="form__text"><div class="align-elem">Узнать стоимость</div></div>
-						<div class="form__body" data-api-type="form" data-api-url="/my/s3/xapi/public/?method=form/postform&param[form_id]=6170303">
-							<form method="post">
-								<!-- Hidden Required Fields -->
-								<input type="hidden" name="project_name" value="КПД-100">
-								<input type="hidden" name="form_subject" value="Заявка на рассчет стоимости | КПД-100">
-								<!-- Hidden Required Fields -->
-								<div class="form-table">
-									<div class="form-tbody">
-										<div class="form-item-group group-text">
-											<div class="form-item form-text name">
-												<div class="form-item__body">
-													<input class="wm-input-default" placeholder="* Ваше имя: " name="Имя" type="text" maxlength="100" required />
-												</div>
-											</div>
-											<div class="form-item form-text phone">
-												<div class="form-item__body">
-													<input class="wm-input-default phone-number" placeholder="* Телефон: " name="Телефон" type="text" maxlength="100" required />
-												</div>
+			<div class="layout column layout_20" >
+				<div class="form-20 widget-11 vertical_mode widget-type-form_adaptive editorElement layer-type-widget">
+					<div class="form__header"><div class="align-elem">Так же мы выполняем заказы на любые сложные железобетонные изделия</div></div>
+					<div class="form__text"><div class="align-elem">Узнать стоимость</div></div>
+					<div class="form__body" data-api-type="form" data-api-url="/my/s3/xapi/public/?method=form/postform&param[form_id]=6170303">
+						<form method="post">
+							<!-- Hidden Required Fields -->
+							<input type="hidden" name="project_name" value="КПД-100">
+							<input type="hidden" name="form_subject" value="Заявка на рассчет стоимости | КПД-100">
+							<!-- Hidden Required Fields -->
+							<div class="form-table">
+								<div class="form-tbody">
+									<div class="form-item-group group-text">
+										<div class="form-item form-text name">
+											<div class="form-item__body">
+												<input class="wm-input-default" placeholder="* Ваше имя: " name="Имя" type="text" maxlength="100" required />
 											</div>
 										</div>
-									</div>
-									<div class="form-tfoot">
-										<div class="form-item-group group-button">
-											<div class="form-submit"><div class="form-item__body"><button class="wm-input-default" type="submit"><span class="align-elem">Жду звонка</span></button></div></div>
+										<div class="form-item form-text phone">
+											<div class="form-item__body">
+												<input class="wm-input-default phone-number" placeholder="* Телефон: " name="Телефон" type="text" maxlength="100" required />
+											</div>
 										</div>
 									</div>
 								</div>
-							</form>
-						</div>
+								<div class="form-tfoot">
+									<div class="form-item-group group-button">
+										<div class="form-submit"><div class="form-item__body"><button class="wm-input-default" type="submit"><span class="align-elem">Жду звонка</span></button></div></div>
+									</div>
+								</div>
+							</div>
+						</form>
 					</div>
 				</div>
-
 			</div>
-		</div>
-
-		<div class="d-none">
-
-			<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
-				<div class="success">
-					<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
-				</div>
-				<h4>Позвоните нам, для бесплатной консультации</h4>
-				<span>
-					<a href="tel:+7 (4212) 69-81-00">
-						<svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>
-					+7 (4212) 69-81-00</a>
-				</span>
-				<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
-				<!-- Hidden Required Fields -->
-				<input type="hidden" name="project_name" value="КПД-100">
-				<input type="hidden" name="form_subject" value="КПД-100 | Заявка на консультацию">
-				<!-- END Hidden Required Fields -->
-				<div class="inputs">
-					<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-					<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-					<input class="input" type="text" name="email" placeholder="E-mail" required>
-				</div>
-				<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
-				<div class="confirm">
-					<input class="checkbox" type="checkbox" checked required />
-					<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
-				</div>
-			</form>
 
 		</div>
+	</div>
 
-	</body>
+	<div class="d-none">
 
-	</html>
+		<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
+			<div class="success">
+				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
+			</div>
+			<h4>Позвоните нам, для бесплатной консультации</h4>
+			<span>
+				<a href="tel:+7 (4212) 69-81-00">
+					<svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>
+				+7 (4212) 69-81-00</a>
+			</span>
+			<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="КПД-100">
+			<input type="hidden" name="form_subject" value="КПД-100 | Заявка на консультацию">
+			<!-- END Hidden Required Fields -->
+			<div class="inputs">
+				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
+				<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
+				<input class="input" type="text" name="email" placeholder="E-mail" required>
+			</div>
+			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
+			<div class="confirm">
+				<input class="checkbox" type="checkbox" checked required />
+				<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
+			</div>
+		</form>
+
+	</div>
+
+</body>
+
+</html>
