add bullon and styles for popup form

--- a/app/blog-page-6.html
+++ b/app/blog-page-6.html
@@ -73,11 +73,12 @@
 				<div class="side-panel-close"></div>
 				<div class="side-panel-content-inner"></div>
 			</div>
-		</div>   
-		<div class="editorElement layer-type-block ui-droppable block-6" >
-			<div class="editorElement layer-type-block ui-droppable block-3" >
-				<div class="layout column layout_5" >
-					<div class="editorElement layer-type-block ui-droppable block-2" >
+		</div>
+
+		<div class="editorElement layer-type-block ui-droppable block-6">
+			<div class="editorElement layer-type-block ui-droppable block-3">
+				<div class="layout column layout_5">
+					<div class="editorElement layer-type-block ui-droppable block-2">
 						<div class="site-name-3 widget-2 widget-type-site_name editorElement layer-type-widget">
 							<a href="index.html">
 								<div class="sn-wrap">   
@@ -121,13 +122,14 @@
 
 			<div class="editorElement layer-type-block ui-droppable block-4 full-height-image">
 
-				<div class="layout column layout_16"></div>
-
-				<div class="layout column layout_8" >
-					<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
+				<div class="layout column layout_16">
+					<div class="layout column layout_8">
+						<a class="open-form-button big-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
+					</div>
 				</div>
 
 				<div class="layout column layout_9" >
+
 					<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
 						<div class="inner">
 							<label class="cell-icon" for="tg-phones-9">
@@ -146,43 +148,41 @@
 							</div>
 						</div>
 					</div>
-				</div>
 
-			</div>
+					<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
 
-			<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
+						<div class="inner">
+							<label class="cell-icon" for="tg-email-14">
+								<div class="icon instagram"></div>
+							</label>
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title"><div class="align-elem">Email:</div></div>
+									<div class="text_body">
+										<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
+									</div>
+								</div>
+							</div>
+						</div>
 
-				<div class="inner">
-					<label class="cell-icon" for="tg-email-14">
-						<div class="icon instagram"></div>
-					</label>
-					<div class="block-body-drop">
-						<div class="cell-text">
-							<div class="title"><div class="align-elem">Email:</div></div>
-							<div class="text_body">
-								<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
+						<div class="inner">
+							<label class="cell-icon" for="tg-email-14">
+								<div class="icon"></div>
+							</label>
+							<input id="tg-email-14" class="tgl-but" type="checkbox">
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title"><div class="align-elem">Email:</div></div>
+									<div class="text_body">
+										<div class="align-elem"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<div class="inner">
-					<label class="cell-icon" for="tg-email-14">
-						<div class="icon"></div>
-					</label>
-					<input id="tg-email-14" class="tgl-but" type="checkbox">
-					<div class="block-body-drop">
-						<div class="cell-text">
-							<div class="title"><div class="align-elem">Email:</div></div>
-							<div class="text_body">
-								<div class="align-elem"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
-							</div>
-						</div>
-					</div>
-				</div>
-
 			</div>
-
+			
 		</div>
 		
 		<div class="editorElement layer-type-block ui-droppable block-19" >
