--- a/app/blog.html
+++ b/app/blog.html
@@ -122,7 +122,7 @@
 
 				<div class="layout column layout_16">
 					<div class="layout column layout_8">
-						<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
+						<a class="open-form-button big-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
 					</div>
 				</div>
 
@@ -515,6 +515,7 @@
 
 
 	<div class="d-none">
+		
 		<div id="take-consultation" class="popup-window zoom-anim-dialog">
 
 			<div class="success">
@@ -559,9 +560,6 @@
 			</div>
 
 		</div>
-	</div>
-
-	<div class="d-none">
 
 		<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
 			<div class="success">
